@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/bash
 
 # https://senbox.atlassian.net/wiki/spaces/SNAP/pages/30539778/Install+SNAP+on+the+command+line
 # https://senbox.atlassian.net/wiki/spaces/SNAP/pages/30539785/Update+SNAP+from+the+command+line
@@ -8,11 +8,13 @@ SNAPVER=8
 # avoid NullPointer crash during S-1 processing
 java_max_mem=10G
 
+# set JAVA_HOME (done in Docker as well)
+export JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64
+
 # install module 'jpy' (A bi-directional Python-Java bridge)
 git clone https://github.com/bcdev/jpy.git /src/snap/jpy
-python3 -m ensurepip
 pip3 install --upgrade pip wheel
-(cd /src/snap/jpy && python3 setup.py build maven bdist_wheel)
+(cd /src/snap/jpy && python3 setup.py bdist_wheel)
 # hack because ./snappy-conf will create this dir but also needs *.whl files...
 mkdir -p /root/.snap/snap-python/snappy
 cp /src/snap/jpy/dist/*.whl "/root/.snap/snap-python/snappy"
@@ -20,22 +22,8 @@ cp /src/snap/jpy/dist/*.whl "/root/.snap/snap-python/snappy"
 # install and update snap
 wget -q -O /src/snap/esa-snap_all_unix_${SNAPVER}_0.sh \
   "http://step.esa.int/downloads/${SNAPVER}.0/installers/esa-snap_all_unix_${SNAPVER}_0.sh"
-
-# hacks to make it run on alpine
-sed -i 's+ bin/unpack200+ $JAVA_HOME/bin/unpack200+g' /src/snap/esa-snap_all_unix_${SNAPVER}_0.sh
-# more hacks to use system java and not oracle (included in installer).
-# Oracle JAVA is not supported with alpine due to missing glibc.
-sed -i 's+$INSTALL4J_JAVA_PREFIX "$app_java_home/bin/java"+$INSTALL4J_JAVA_PREFIX java+g' /src/snap/esa-snap_all_unix_${SNAPVER}_0.sh
-sed -i 's+-Dinstall4j.jvmDir="$app_java_home"+-Dinstall4j.jvmDir=$JAVA_HOME/jre+g' /src/snap/esa-snap_all_unix_${SNAPVER}_0.sh
-sed -i 's+-Djava.ext.dirs="$app_java_home/lib/ext:$app_java_home/jre/lib/ext"++g' /src/snap/esa-snap_all_unix_${SNAPVER}_0.sh
-sed -i 's+-classpath "$local_classpath"+-classpath "$local_classpath:$app_java_home/lib/ext:$app_java_home/jre/lib/ext"+g' /src/snap/esa-snap_all_unix_${SNAPVER}_0.sh
 sh /src/snap/esa-snap_all_unix_${SNAPVER}_0.sh -q -varfile /src/snap/response.varfile
-
-# one more hack to keep using system java
-sed -i 's+jdkhome="./jre"+jdkhome="$JAVA_HOME"+g' /usr/local/snap/etc/snap.conf
-# freezing at time, likely no longer needed
-# /usr/local/snap/bin/snap --nosplash --nogui --modules --update-all
-rm -rf /usr/local/snap/jre
+/usr/local/snap/bin/snap --nosplash --nogui --modules --update-all
 
 # create snappy and python binding with snappy
 /usr/local/snap/bin/snappy-conf /usr/bin/python3
@@ -44,14 +32,12 @@ rm -rf /usr/local/snap/jre
 # increase the JAVA VM size to avoid NullPointer exception in Snappy during S-1 processing
 (cd /root/.snap/snap-python/snappy && sed -i "s/^java_max_mem:.*/java_max_mem: $java_max_mem/" snappy.ini)
 
+# get minor python version
+PYMINOR=$(python3 -c 'import platform; major, minor, patch = platform.python_version_tuple(); print(minor)')
+(cd /usr/local/lib/python3.$PYMINOR/dist-packages/snappy/ && sed -i "s/^java_max_mem:.*/java_max_mem: $java_max_mem/" snappy.ini)
+
 # test
 /usr/bin/python3 -c 'from snappy import ProductIO'
-if [ -f /src/snap/about.py ]
-then
-    /usr/bin/python3 /src/snap/about.py
-    cp /src/snap/about.py /root/.snap/
-fi
-
 
 # cleanup installer
 rm -f /src/snap/esa-snap_all_unix_${SNAPVER}_0.sh
